<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/main_title" />

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_round_gray_light"
            android:padding="@dimen/dp_1" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/Text.Medium.Bold.Black.SingleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_8" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_24"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFollower"
                    style="@style/Text.Medium.Bold.Black.SingleLine"
                    android:layout_width="wrap_content" android:text="20448"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/Text.Medium.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_follower" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFollowing"
                    style="@style/Text.Medium.Bold.Black.SingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    style="@style/Text.Medium.Bold.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_following"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ToggleButton
                    android:id="@+id/tbFollow"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_32"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:background="@drawable/selector_tb_follow"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textOff="@string/unfollow"
                    android:textOn="@string/follow" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24">

            <TextView
                style="@style/Text.Medium.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_bio" />

            <TextView
                android:id="@+id/tvBio"
                style="@style/Text.Medium.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8">

            <TextView
                style="@style/Text.Medium.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_location" />

            <TextView
                android:id="@+id/tvLocation"
                style="@style/Text.Medium.Bold.Black.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8">

            <TextView
                style="@style/Text.Medium.Bold.Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_url" />

            <TextView
                android:id="@+id/tvUrl"
                style="@style/Text.Medium.Bold.Black.SingleLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_16" />
        </LinearLayout>

    </LinearLayout>
</layout>
